[gd_scene load_steps=15 format=3 uid="uid://c0mk5x8kde7hy"]

[ext_resource type="Script" path="res://Scenes/BoxTutorial/07_export_center.gd" id="1_fmrt4"]
[ext_resource type="TileSet" uid="uid://dcvrq213psdxl" path="res://Assets/tile_textures/x4_ground/x4_v2.tres" id="2_5kae2"]
[ext_resource type="TileSet" uid="uid://v2p3qqlfimrr" path="res://Assets/TileSets/ground_tile_set.tres" id="3_ei4o2"]
[ext_resource type="Texture2D" uid="uid://d0hwjydae26bq" path="res://Assets/ui/progressbars/circle_progress_bar_under.png" id="4_re00v"]
[ext_resource type="Texture2D" uid="uid://dn06aoqdf6l8p" path="res://Assets/ui/progressbars/circle_progress_bar_progress.png" id="5_4isqb"]
[ext_resource type="AudioStream" uid="uid://nvdhdv1r7dvh" path="res://Assets/sfx/invest_in_forest/invest_in_forest_04_01.ogg" id="6_bxp02"]
[ext_resource type="AudioStream" uid="uid://dh2dcdnd6vffv" path="res://Assets/sfx/invest_in_forest/invest_in_forest_2_01.ogg" id="7_7sner"]

[sub_resource type="Animation" id="Animation_m36kj"]
resource_name = "01"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Instructions/01:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show_tutorial_replay_window"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/fade_hide:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/FeedbackContainer/AbsorberProgress:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/FeedbackContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Instructions/01/05:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Instructions/02:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6rds7"]
resource_name = "02"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show_tutorial_replay_window"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Instructions/02:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Instructions/01:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/fade_hide:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/FeedbackContainer/StorageProgress:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Instructions/04:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1iskb"]
resource_name = "03"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Instructions/03:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show_tutorial_replay_window"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/fade_hide:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Instructions/02:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pnksi"]
resource_name = "04"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Instructions/04:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j82h0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/fade_bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/fade_hide:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Water_is:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Now_trapped:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Lets:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Instructions/01:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Instructions/03:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Instructions/02:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/Instructions/04:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasLayer/FeedbackContainer/AbsorberProgress:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasLayer/FeedbackContainer/StorageProgress:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CanvasLayer/FeedbackContainer:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CanvasLayer/ToReach:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("AnimationPlayer:speed_scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("CanvasLayer/Instructions/01/05:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qjkcr"]
resource_name = "preface"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/fade_bg:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 12.4, 15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/fade_hide:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Water_is:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 10.6, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Now_trapped:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 3.1, 13, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Lets:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.3, 6.1, 13.6, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"01", -1, 1.0, false],
"method": &"play"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AudioStreamPlayer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Instructions/01:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/ToReach:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 6.6, 9.5, 13.8, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("AnimationPlayer:speed_scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/10/type = "method"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("AudioStreamPlayer2")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(9.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t4wte"]
_data = {
"01": SubResource("Animation_m36kj"),
"02": SubResource("Animation_6rds7"),
"03": SubResource("Animation_1iskb"),
"04": SubResource("Animation_pnksi"),
"RESET": SubResource("Animation_j82h0"),
"preface": SubResource("Animation_qjkcr")
}

[node name="07_ExportCenter" type="Node2D" node_paths=PackedStringArray("tile_map_ground_4x", "tile_map_block_ground")]
process_mode = 1
y_sort_enabled = true
script = ExtResource("1_fmrt4")
tile_map_ground_4x = NodePath("Gound4x")
tile_map_block_ground = NodePath("Gound1x")

[node name="Gound4x" type="TileMap" parent="."]
z_as_relative = false
y_sort_enabled = true
position = Vector2(-384, 0)
tile_set = ExtResource("2_5kae2")
format = 2
layer_0/name = "base"
layer_0/y_sort_enabled = true

[node name="Gound1x" type="TileMap" parent="."]
z_index = 1
z_as_relative = false
y_sort_enabled = true
position = Vector2(-128, -64)
tile_set = ExtResource("3_ei4o2")
format = 2
layer_0/name = "base"
layer_0/y_sort_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t4wte")
}
autoplay = "preface"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.314316, 0.314316, 0.314316, 1)

[node name="fade_bg" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Water_is" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.53125
anchor_bottom = 0.5
offset_left = -860.0
offset_top = -481.0
offset_right = 317.0
offset_bottom = -356.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Symbiotic Exchange"
metadata/_edit_use_anchors_ = true

[node name="Now_trapped" type="Label" parent="CanvasLayer"]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -860.0
offset_top = -279.0
offset_right = 740.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Fungi are nature’s master recyclers, expertly making resources bioavailable to other life forms. "
autowrap_mode = 3

[node name="Lets" type="Label" parent="CanvasLayer"]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -860.0
offset_top = -40.0
offset_right = 740.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Our mycelium network extends beyond the roots of plants, enhancing their access to water and minerals. "
autowrap_mode = 3

[node name="ToReach" type="Label" parent="CanvasLayer"]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -860.0
offset_top = 161.0
offset_right = 740.0
offset_bottom = 362.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "This cooperation not only supports plant growth but also ensures a crucial flow of carbon directly to our mycelium, vital for our survival and thriving."
autowrap_mode = 3

[node name="Instructions" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="01" type="Label" parent="CanvasLayer/Instructions"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1600, 300)
layout_mode = 1
offset_left = 173.0
offset_top = 200.0
offset_right = 1773.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 50
text = "Grow an Export Center"
autowrap_mode = 3

[node name="05" type="Label" parent="CanvasLayer/Instructions/01"]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1600, 44)
layout_mode = 1
offset_top = 61.0
offset_right = 1600.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 35
text = "This structure actively exports water and minerals, crucial for supporting surrounding plant life."
autowrap_mode = 3

[node name="02" type="Label" parent="CanvasLayer/Instructions"]
unique_name_in_owner = true
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1600, 300)
layout_mode = 0
offset_left = 173.0
offset_top = 270.0
offset_right = 1773.0
offset_bottom = 570.0
theme_override_font_sizes/font_size = 50
text = "Place a Carbon Storage Collector:"
autowrap_mode = 3

[node name="06" type="Label" parent="CanvasLayer/Instructions/02"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(1600, 300)
layout_mode = 0
offset_top = 59.0
offset_right = 1600.0
offset_bottom = 359.0
theme_override_font_sizes/font_size = 35
text = "Install this collector within the radius of your Exchange Center to capture excess carbon. 
This carbon first flows through our mycelium network."
autowrap_mode = 3

[node name="03" type="Label" parent="CanvasLayer/Instructions"]
unique_name_in_owner = true
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1600, 300)
layout_mode = 0
offset_left = 173.0
offset_top = 261.0
offset_right = 1773.0
offset_bottom = 561.0
theme_override_font_sizes/font_size = 50
text = "Through the Symbiotic Exchange Center, we facilitate a vital cycle: plants use exported resources to grow and directly transfer carbon to our mycelium network. This interaction revitalizes and sustains our ecosystem."
autowrap_mode = 3

[node name="04" type="Label" parent="CanvasLayer/Instructions"]
unique_name_in_owner = true
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1600, 300)
layout_mode = 0
offset_left = 173.0
offset_top = 261.0
offset_right = 1773.0
offset_bottom = 561.0
theme_override_font_sizes/font_size = 50
text = "Observe as Plants Thrive:"
autowrap_mode = 3

[node name="05" type="Label" parent="CanvasLayer/Instructions/04"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(1600, 300)
layout_mode = 0
offset_top = 68.0
offset_right = 1600.0
offset_bottom = 368.0
theme_override_font_sizes/font_size = 35
text = "Powered by the resources from the Exchange Center, watch nearby plants grow and photosynthesize, returning carbon to the environment."
autowrap_mode = 3

[node name="FeedbackContainer" type="Control" parent="CanvasLayer"]
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AbsorberProgress" type="TextureProgressBar" parent="CanvasLayer/FeedbackContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 2
max_value = 2.0
fill_mode = 4
texture_under = ExtResource("4_re00v")
texture_progress = ExtResource("5_4isqb")

[node name="AbsorberLabel" type="Label" parent="CanvasLayer/FeedbackContainer/AbsorberProgress"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 0
offset_left = 115.0
offset_top = 40.0
offset_right = 238.0
offset_bottom = 61.0
text = "Grow Water Storage Collectors: 0/3"

[node name="StorageProgress" type="TextureProgressBar" parent="CanvasLayer/FeedbackContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 2
max_value = 1.0
fill_mode = 4
texture_under = ExtResource("4_re00v")
texture_progress = ExtResource("5_4isqb")

[node name="StorageLabel" type="Label" parent="CanvasLayer/FeedbackContainer/StorageProgress"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 0
offset_left = 115.0
offset_top = 40.0
offset_right = 238.0
offset_bottom = 61.0
text = "Grow Water Storage Collectors: 0/3"

[node name="fade_hide" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
auto_translate_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bxp02")
volume_db = -16.0
bus = &"music_bus"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_7sner")
volume_db = -16.0
bus = &"music_bus"
